--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '3.8'
 
 services:
   app:
+    platform: linux/amd64
     build:
       context: ..
-      dockerfile: docker/Dockerfile
+      dockerfile: ../Dockerfile
     restart: always
     ports:
       - "3000:3000"
@@ -17,6 +17,7 @@ services:
       - db
 
   db:
+    platform: linux/amd64
     image: postgres:15
     restart: always
     environment:
