Fixed docker file....

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     platform: linux/amd64
     build:
       context: ..
-      dockerfile: ../Dockerfile
+      dockerfile: Dockerfile
     restart: always
     ports:
       - "3000:3000"
